# Dynu-IP-Refresher

./: .gitignore  .gitlab-ci.yml  API.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  conanfile.txt  iprefresher  iprefresher.cbp  iprefresher.service  main.cpp
Docker/Linux/: Dockerfile
Docker/Windows/: Dockerfile
config/: iprefresher.cfg
docs/: Doxyfile.in
inc/: Config.h  ConfigParser.h  Credentials.h  FileLogger.h  IPRefresher.h  IpHelper.h  Logger.h
inc/api/: API.h  DynuAPI.h  Hashmap.h  IPAPI.h  TelegramAPI.h
inc/gui/: MainWindow.h
src/: API.cpp  API.h  Config.cpp  ConfigParser.cpp  Credentials.cpp  FileLogger.cpp  IPRefresher.cpp  IpHelper.cpp  Logger.cpp  Logger.h  main.cpp  maingui.cpp
src/api/: API.cpp  API.h  DynuAPI.cpp  DynuAPI.h  Hashmap.h  IPAPI.cpp  IPAPI.h  TelegramAPI.cpp  TelegramAPI.h
src/gui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
tests/: UnitTest.cpp
